--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ body {
     color: #000000;
 }
 
-.ourmission img {
+.ourmission-img {
     object-fit: contain;
     width: min-content;
     height: min-content;
+    
 }
 
 
@@ -64,27 +65,29 @@ body {
 
 
 
-/*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins' , sans-serif;
-}*/
+}
 body {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    
 }
 
 .search {
     position: relative;
-    width: 360px;
+    width: 60px;
     height: 60px;
     background: #FFFFFF;
     border-radius: 60px;
     transition: 0.5s;
     box-shadow: 0 0 0 5px #2573ef;
+    overflow: hidden;
 }
 
 .search.active {
@@ -135,4 +138,47 @@ body {
     align-items: center;
 }
 
-.search .input
+.search .input input {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    padding: 10px 0;
+}
+
+.clear {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 15px;
+    height: 15px;
+    right: 15px;
+    background: #fff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.clear::before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999;
+    transform: rotate(45deg);
+}
+
+.clear::after {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999;
+    transform: rotate(315deg);
+}
+
+
