--- a/style.css
+++ b/style.css
@@ -3,6 +3,80 @@ body {
     background: radial-gradient(circle, rgba(12,124,90,1) 51%, rgba(5,126,111,1) 90%);
 }
 
+
+  
+#homeimg {
+    display: flex;
+}
+
+/*Navbar css*/
+
+.logonav {
+    width: 100px;
+    height: 100px;
+    border-radius: -2px;
+}
+
+.button-29 {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #399367 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  width: 120px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 15px;
+}
+
+.button-29:focus {
+  box-shadow: #277738 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+
+.button-29:hover {
+  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #127130 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-29:active {
+  box-shadow: #288671 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+/*End of Navbar css*/
+
+/*Beginning of Card carousel*/
+
+.card-carousel {
+    align-items: center;
+    justify-items: center;
+}
+.carouselExampleControls{
+    padding:5%;
+}
+
+/*End of Card carousel*/
+
 .parallax {
     background-image: url();
   
@@ -13,23 +87,34 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
-#homeimg {
+
+
+
+.b2t {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #FFF;
+    color: #178949;
+    font-size: 32px;
+    border: none;
+    outline: none;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: all .4s;
+    pointer-events: none;
+    opacity: 0;
 }
 
-.logonav {
-    width: 100px;
-    height: 100px;
-    border-radius: -2px;
+.b2t.active {
+    pointer-events: auto;
+    opacity: 1;
 }
-
-
-
-
-
-
-
 
 
 
@@ -59,129 +144,6 @@ body {
     color: #000000;
 }
 
-
-
-
-
-
-
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins' , sans-serif;
-}
-body {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    
-}
-
-.search {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    background: #FFFFFF;
-    border-radius: 60px;
-    transition: 0.5s;
-    box-shadow: 0 0 0 5px #2573ef;
-    overflow: hidden;
-}
-
-.search.active {
-    width: 360px;
-}
-
-.search .icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 60px;
-    height: 60px;
-    background: #FFFFFF;
-    border-radius: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    cursor: pointer;
-}
-
-.search .icon::before {
-    content: '';
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    border: 3px solid #287dfc;
-    border-radius: 50%;
-    transform: translate(-4px,-4px);
-}
-
-.search .icon::after {
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 12px;
-    background: #287dfc;
-    transform: translate(6px, 6px) rotate(315deg);
-}
-
-.search .input {
-    position: relative;
-    width: 300px;
-    height: 60px;
-    left: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.search .input input {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    padding: 10px 0;
-}
-
-.clear {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px;
-    height: 15px;
-    right: 15px;
-    background: #fff;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-}
-
-.clear::before {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background: #999;
-    transform: rotate(45deg);
-}
-
-.clear::after {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background: #999;
-    transform: rotate(315deg);
-}
 
 
 
