--- a/style.css
+++ b/style.css
@@ -237,6 +237,11 @@ p {
   background-color: #abdaf4;
 }
 
+.card-parallax-gum {
+  text-align: center;
+  align-items: center;
+  background-color: #7AC6D9;
+}
 
 
 .b2t {
