--- a/style.css
+++ b/style.css
@@ -243,29 +243,44 @@ p {
   background-color: #7AC6D9;
 }
 
+/*Back to top button*/
 
-.b2t {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  border-radius: 50%;
+#button {
+  align-items: end;
+  display: inline-block;
+  background-color: #FF9800;
   width: 50px;
   height: 50px;
-  background-color: #FFF;
-  color: #178949;
-  font-size: 32px;
-  border: none;
-  outline: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  transition: all .4s;
-  pointer-events: none;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
   opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+#button::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+#button:hover {
+  cursor: pointer;
+  background-color: #333;
+}
+#button:active {
+  background-color: #555;
+}
+#button.show {
+  opacity: 1;
+  visibility: visible;
 }
 
-.b2t.active {
-  pointer-events: auto;
-  opacity: 1;
-}
+/*End of Back to top Button*/
