--- a/style.css
+++ b/style.css
@@ -134,9 +134,6 @@ p {
 
 
 
-
-
-
 .flex {
   /*Flexbox for containers*/
   display: flex;
@@ -248,3 +245,5 @@ p {
 
 
 /*End of Back to top Button*/
+
+/*About Intro*/
