--- a/style.css
+++ b/style.css
@@ -86,11 +86,6 @@ body {
   padding: 5%;
 }
 
-/*End of Card carousel*/
-
-
-/*Card carousel*/
-
 .card_names h1 {
   align-items: center;
   justify-content: center;
@@ -247,3 +242,9 @@ p {
 /*End of Back to top Button*/
 
 /*About Intro*/
+
+.card-About {
+  align-items: center;
+  justify-items: center;
+  background-color: #7AC6D9;
+}
