--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ body {
   align-items: center;
   justify-items: center;
   background-color: #7AC6D9;
+  box-shadow: 5px 5px 5px #3A7A8A;
 }
 
 .carouselExampleControls {
